feat: 도움 요청 세부사항 입력 모달 추가

--- a/src/main/resources/static/html/modals/once-help-main-modal.html
+++ b/src/main/resources/static/html/modals/once-help-main-modal.html
@@ -1,7 +1,7 @@
 <div id="once-help-main-modal" class="modal">
   <div class="modal-content">
     <h2>어떤 도움을 요청하시겠습니까?</h2>
-    <button onclick="openOnceModal()">도움 한 번 요청하기</button>
+    <button onclick="openDetailsModal()">도움 한 번 요청하기</button>
     <button onclick="alert('장기 도움 요청하기는 아직 구현되지 않았습니다.')">장기 도움 요청하기</button>
   </div>
 </div>
