feat: 도와주기 요청 처리

--- a/src/main/resources/static/html/modals/help-details-modal.html
+++ b/src/main/resources/static/html/modals/help-details-modal.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="actions">
-            <button onclick="proceedToOnceModal()">다음</button>
+            <button onclick="proceedToOnceModal(false)">다음</button>
             <button onclick="closeDetailsModal()">취소</button>
         </div>
     </div>
