--- a/src/main/resources/static/html/modals/once-help-request-modal.html
+++ b/src/main/resources/static/html/modals/once-help-request-modal.html
@@ -1,7 +1,7 @@
 <div id="once-modal" class="modal">
   <div class="modal-content">
     <h2>도움 한 번 요청하기</h2>
-    <form id="help-form">
+    <form id="once-help-form">
       <div class="form-group">
         <label for="title">제목</label>
         <input type="text" id="title" name="title" placeholder="제목을 입력하세요" required>
