fix: 로그아웃 모달이 안 보이는 오류 수정

--- a/src/main/resources/static/html/header.html
+++ b/src/main/resources/static/html/header.html
@@ -11,7 +11,7 @@
 
     <!-- 사용자 정보 표시 -->
     <div id="user-info" style="position: relative; display: none;">
-      <span id="member-name" onclick="toggleModal()" style="cursor: pointer; text-decoration: underline;">안녕하세요, 김종민님!</span>
+      <span id="member-name" onclick="logoutModal()" style="cursor: pointer; text-decoration: underline;">안녕하세요, 김종민님!</span>
       <div id="logout-modal" class="user-info-modal" style="display: none;">
         <div class="user-info-modal-content">
           <h2>로그아웃 하시겠습니까?</h2>
